250815 2151 황승우 로그인 js 수정중

--- a/webapp/app/admin/adminLogin.html
+++ b/webapp/app/admin/adminLogin.html
@@ -6,9 +6,9 @@
     <title>관리자로그인</title>
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/adminLogin.css" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/admin/adminlogin.js"></script>
   </head>
 
