--- a/webapp/app/admin/careDetail.html
+++ b/webapp/app/admin/careDetail.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>회원 상세페이지(일반)</title>
     <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/careDetail.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
     <script defer src="./../../assets/js/modal/modalEditName.js"></script>
     <script defer src="./../../assets/js/modal/modalDeleteMember.js"></script>
     <script defer src="./../../assets/js/modal/modalPointRefundLog.js"></script>
-    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
   <body>
     <div id="header"></div>
@@ -32,7 +32,9 @@
                 <div class="table_head_name">성명</div>
                 <div class="table_name_detail">
                   <span id="name">슬립핑</span>
-                  <button onclick="modalEditNameShow()">수정</button>
+                  <button onclick="modalEditNameShow()" type="button">
+                    수정
+                  </button>
                 </div>
                 <div class="table_member_type">
                   <div class="table_member_type_title">
@@ -92,19 +94,27 @@
                 <div class="table_head table_head_point">포인트 잔액</div>
                 <div class="table_point_detail">
                   <input type="text" readonly />
-                  <button onclick="modalPointRefundLogShow()">환급내역 조회</button>
+                  <button onclick="modalPointRefundLogShow()" type="button">
+                    환급내역 조회
+                  </button>
                 </div>
               </div>
               <div class="detail_content_account">
                 <div class="table_head_account">계좌 수정</div>
                 <div class="table_detail table_pw_detail">
-                  <input type="text" readonly />
-                  <button class="update_btn">수정</button>
+                  <input type="text" placeholder="카카오뱅크 3333-05-8985942" />
+                  <button class="update_btn" type="button">수정</button>
                 </div>
               </div>
             </div>
             <div class="delete">
-              <button type="" class="delete_btn" onclick="modalDeleteMemberShow()">삭제</button>
+              <button
+                type="button"
+                class="delete_btn"
+                onclick="modalDeleteMemberShow()"
+              >
+                삭제
+              </button>
             </div>
           </form>
         </div>
