--- a/webapp/app/admin/newsBoardUpdate.html
+++ b/webapp/app/admin/newsBoardUpdate.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>뉴스 수정</title>
-    <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/newsBoardAdd.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
   </head>
   <body>
@@ -40,8 +39,8 @@
           />
         </div>
         <div class="add_btn">
-          <button class="cancle">취소</button>
-          <button class="add">수정 완료</button>
+          <button class="cancle" type="button">취소</button>
+          <button class="add" type="button">수정 완료</button>
         </div>
       </section>
     </main>
