--- a/webapp/app/login/login.html
+++ b/webapp/app/login/login.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>로그인페이지</title>
     <link rel="stylesheet" href="./../../assets/css/login/login.css" />
-      <link rel="stylesheet" href="./../../assets/css/header.css">
-  <link rel="stylesheet" href="./../../assets/css/footer.css">
-  <script defer src="./../../assets/js/main/include.js"></script>
+    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/footer.css" />
+    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/login/login.js"></script>
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
 
   <body>
-  <div id="header"></div>
+    <div id="header"></div>
     <main>
       <section class="login">
         <form action="" method="">
@@ -20,14 +22,28 @@
               <p>login</p>
             </div>
             <div class="id_box">
-              <input type="text" placeholder="USER ID" />
+              <input
+                type="text"
+                name="id"
+                id="id_input"
+                placeholder="USER ID"
+              />
             </div>
             <div class="pw_box">
-              <input type="password" placeholder="PASSWORD" />
+              <input
+                type="password"
+                name="pw"
+                id="pw_input"
+                placeholder="PASSWORD"
+              />
             </div>
             <div class="bt_box">
-              <button>돌봄 로그인</button>
-              <button>일반 로그인</button>
+              <button type="button" onclick="islogin()" type="button">
+                돌봄 로그인
+              </button>
+              <button type="button" onclick="islogin()" type="button">
+                일반 로그인
+              </button>
             </div>
             <div class="link_box">
               <a href="./../../app/login/findId.html">아이디 찾기</a>
@@ -38,7 +54,7 @@
         </form>
       </section>
     </main>
-
-  <div id="footer"></div>
+    <div id="footer"></div>
+    <div id="modalAdminLoginFailed"></div>
   </body>
 </html>
