--- a/webapp/header_admin.html
+++ b/webapp/header_admin.html
@@ -3,8 +3,8 @@
     <!-- 헤더 왼쪽 메뉴 -->
     <span>
       <!-- 로고 -->
-      <a href="./app/admin/adminLogin.html">
-        <img src="./assets/img/main/logoP.png">
+      <a href="#">
+        <img src="../../assets/img/main/logoP.png" />
       </a>
       <!-- 관리자 표시(그냥 텍스트) -->
       <div class="admin_text">· 관리자</div>
@@ -12,9 +12,7 @@
     <!-- 헤더 오른쪽 메뉴 -->
     <span>
       <!-- 로그아웃 메뉴 -->
-      <a href="./app/admin/adminLogin.html">
-        로그아웃
-      </a>
+      <a href="../../app/admin/adminLogin.html" class="logout"> 로그아웃 </a>
     </span>
   </div>
-</header> 
+</header>
