--- a/webapp/app/admin/bannerUpdate.html
+++ b/webapp/app/admin/bannerUpdate.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>뉴스 수정</title>
     <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/bannerUpdate.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
-        <script defer src="./../../assets/js/modal/modalAddNewsFinished.js"></script>
-    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+    <script
+      defer
+      src="./../../assets/js/modal/modalAddNewsFinished.js"
+    ></script>
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
   <body>
     <div id="header"></div>
@@ -47,7 +50,9 @@
         </div>
         <div class="add_btn">
           <button class="cancle" onclick="cancle()">취소</button>
-          <button class="add" onclick="modalAddNewsFinishedShow()">수정 완료</button>
+          <button class="add" onclick="modalAddNewsFinishedShow()">
+            수정 완료
+          </button>
         </div>
       </section>
     </main>
