--- a/webapp/app/admin/careCareerDetailUpdate.html
+++ b/webapp/app/admin/careCareerDetailUpdate.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>돌봄회원 이력 수정 신청관리</title>
     <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link
@@ -13,7 +13,7 @@
       href="./../../assets/css/admin/careCareerDetailUpdate.css"
     />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
     <script
@@ -46,10 +46,12 @@
               <div class="tbody_content tbody_phone">010-XXXX-XXXX</div>
               <div class="tbody_content tbody_email">bellguy@naver.com</div>
               <div class="tbody_content tbody_detach">
-                파일명.png <button class="download">다운로드</button>
+                파일명.png
+                <button class="download" type="button">다운로드</button>
               </div>
               <div class="tbody_content tbody_account">
-                파일명.png <button class="download">다운로드</button>
+                파일명.png
+                <button class="download" type="button">다운로드</button>
               </div>
             </div>
           </div>
