--- a/webapp/app/admin/newsBoadDetail.html
+++ b/webapp/app/admin/newsBoadDetail.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>뉴스 상세페이지</title>
-    <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link
@@ -13,7 +12,7 @@
       href="./../../assets/css/admin/newsBoardDetail.css"
     />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/admin/newsBoardDetail.js"></script>
     <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
