--- a/webapp/app/admin/newsBoard.html
+++ b/webapp/app/admin/newsBoard.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>뉴스 게시글 관리</title>
-    <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/newsBoard.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
     <script defer src="./../../assets/js/modal/modalDeleteNews.js"></script>
-    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
 
   <body>
@@ -45,73 +44,171 @@
             <div class="table_content">
               <div class="table">
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/newsBoadDetail.html">1</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/newsBoadDetail.html">뉴스 제목</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/newsBoadDetail.html">1</a>
                   </li>
-                  <li class="body_date"><a href="./../../app/admin/newsBoadDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >뉴스 제목</a
+                    >
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >2025-08-09</a
+                    >
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNewsShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/newsBoadDetail.html">1</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/newsBoadDetail.html">뉴스 제목</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/newsBoadDetail.html">1</a>
                   </li>
-                  <li class="body_date"><a href="./../../app/admin/newsBoadDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >뉴스 제목</a
+                    >
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >2025-08-09</a
+                    >
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNewsShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/newsBoadDetail.html">1</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/newsBoadDetail.html">뉴스 제목</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/newsBoadDetail.html">1</a>
                   </li>
-                  <li class="body_date"><a href="./../../app/admin/newsBoadDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >뉴스 제목</a
+                    >
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >2025-08-09</a
+                    >
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNewsShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/newsBoadDetail.html">1</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/newsBoadDetail.html">뉴스 제목</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/newsBoadDetail.html">1</a>
                   </li>
-                  <li class="body_date"><a href="./../../app/admin/newsBoadDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >뉴스 제목</a
+                    >
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >2025-08-09</a
+                    >
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNewsShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/newsBoadDetail.html">1</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/newsBoadDetail.html">뉴스 제목</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/newsBoadDetail.html">1</a>
                   </li>
-                  <li class="body_date"><a href="./../../app/admin/newsBoadDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >뉴스 제목</a
+                    >
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >2025-08-09</a
+                    >
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNewsShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/newsBoadDetail.html">1</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/newsBoadDetail.html">뉴스 제목</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/newsBoadDetail.html">1</a>
                   </li>
-                  <li class="body_date"><a href="./../../app/admin/newsBoadDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >뉴스 제목</a
+                    >
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >2025-08-09</a
+                    >
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNewsShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/newsBoadDetail.html">1</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/newsBoadDetail.html">뉴스 제목</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/newsBoadDetail.html">1</a>
                   </li>
-                  <li class="body_date"><a href="./../../app/admin/newsBoadDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >뉴스 제목</a
+                    >
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/newsBoadDetail.html"
+                      >2025-08-09</a
+                    >
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNewsShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNewsShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
               </div>
@@ -139,7 +236,9 @@
                 </li>
               </ul>
               <div class="add">
-                <a href="./../../app/admin/newsBoardAdd.html" class="add_btn">등록</a>
+                <a href="./../../app/admin/newsBoardAdd.html" class="add_btn"
+                  >등록</a
+                >
               </div>
             </div>
           </div>
