--- a/webapp/app/admin/newsBoardAdd.html
+++ b/webapp/app/admin/newsBoardAdd.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>뉴스 추가</title>
-    <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/newsBoardAdd.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
-    <script defer src="./../../assets/js/modal/modalAddNewsFinished.js"></script>
-    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+    <script
+      defer
+      src="./../../assets/js/modal/modalAddNewsFinished.js"
+    ></script>
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
   <body>
     <div id="header"></div>
@@ -40,8 +42,14 @@
           <input type="text" class="link_input" />
         </div>
         <div class="add_btn">
-          <button class="cancle" onclick="cancle()">취소</button>
-          <button class="add" onclick="modalAddNewsFinishedShow()">추가 완료</button>
+          <button class="cancle" onclick="cancle()" type="button">취소</button>
+          <button
+            class="add"
+            onclick="modalAddNewsFinishedShow()"
+            type="button"
+          >
+            추가 완료
+          </button>
         </div>
       </section>
     </main>
