--- a/webapp/app/admin/notice.html
+++ b/webapp/app/admin/notice.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>공지사항 관리</title>
-    <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/notice.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
     <script defer src="./../../assets/js/modal/modalDeleteNotice.js"></script>
     <script defer src="./../../assets/js/admin/notice.js"></script>
-    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
 
   <body>
@@ -50,87 +49,199 @@
             <div class="table_big">
               <div class="table_md">
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">1</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/noticeDetail.html">1</a>
                   </li>
-                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
-                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">47</a></li>
-                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/noticeDetail.html"
+                      >사이트 이용시 주의 사항</a
+                    >
+                  </li>
+                  <li class="body_name">
+                    <a href="./../../app/admin/noticeDetail.html">방울청년</a>
+                  </li>
+                  <li class="body_cnt">
+                    <a href="./../../app/admin/noticeDetail.html">47</a>
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/noticeDetail.html">2025-08-09</a>
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNoticeShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">2</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/noticeDetail.html">2</a>
                   </li>
-                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
-                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">47</a></li>
-                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/noticeDetail.html"
+                      >사이트 이용시 주의 사항</a
+                    >
+                  </li>
+                  <li class="body_name">
+                    <a href="./../../app/admin/noticeDetail.html">방울청년</a>
+                  </li>
+                  <li class="body_cnt">
+                    <a href="./../../app/admin/noticeDetail.html">47</a>
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/noticeDetail.html">2025-08-09</a>
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNoticeShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">3</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/noticeDetail.html">3</a>
                   </li>
-                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
-                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">47</a></li>
-                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/noticeDetail.html"
+                      >사이트 이용시 주의 사항</a
+                    >
+                  </li>
+                  <li class="body_name">
+                    <a href="./../../app/admin/noticeDetail.html">방울청년</a>
+                  </li>
+                  <li class="body_cnt">
+                    <a href="./../../app/admin/noticeDetail.html">47</a>
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/noticeDetail.html">2025-08-09</a>
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNoticeShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">4</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/noticeDetail.html">4</a>
                   </li>
-                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
-                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">47</a></li>
-                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/noticeDetail.html"
+                      >사이트 이용시 주의 사항</a
+                    >
+                  </li>
+                  <li class="body_name">
+                    <a href="./../../app/admin/noticeDetail.html">방울청년</a>
+                  </li>
+                  <li class="body_cnt">
+                    <a href="./../../app/admin/noticeDetail.html">47</a>
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/noticeDetail.html">2025-08-09</a>
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNoticeShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">5</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/noticeDetail.html">5</a>
                   </li>
-                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
-                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">47</a></li>
-                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/noticeDetail.html"
+                      >사이트 이용시 주의 사항</a
+                    >
+                  </li>
+                  <li class="body_name">
+                    <a href="./../../app/admin/noticeDetail.html">방울청년</a>
+                  </li>
+                  <li class="body_cnt">
+                    <a href="./../../app/admin/noticeDetail.html">47</a>
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/noticeDetail.html">2025-08-09</a>
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNoticeShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">6</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/noticeDetail.html">6</a>
                   </li>
-                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
-                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">35</a></li>
-                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/noticeDetail.html"
+                      >사이트 이용시 주의 사항</a
+                    >
+                  </li>
+                  <li class="body_name">
+                    <a href="./../../app/admin/noticeDetail.html">방울청년</a>
+                  </li>
+                  <li class="body_cnt">
+                    <a href="./../../app/admin/noticeDetail.html">35</a>
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/noticeDetail.html">2025-08-09</a>
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNoticeShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
                 <ul class="table_body">
-                  <li class="body_number"><a href="./../../app/admin/noticeDetail.html">7</a></li>
-                  <li class="body_content">
-                    <a href="./../../app/admin/noticeDetail.html">사이트 이용시 주의 사항</a>
+                  <li class="body_number">
+                    <a href="./../../app/admin/noticeDetail.html">7</a>
                   </li>
-                  <li class="body_name"><a href="./../../app/admin/noticeDetail.html">방울청년</a></li>
-                  <li class="body_cnt"><a href="./../../app/admin/noticeDetail.html">47</a></li>
-                  <li class="body_date"><a href="./../../app/admin/noticeDetail.html">2025-08-09</a></li>
+                  <li class="body_content">
+                    <a href="./../../app/admin/noticeDetail.html"
+                      >사이트 이용시 주의 사항</a
+                    >
+                  </li>
+                  <li class="body_name">
+                    <a href="./../../app/admin/noticeDetail.html">방울청년</a>
+                  </li>
+                  <li class="body_cnt">
+                    <a href="./../../app/admin/noticeDetail.html">47</a>
+                  </li>
+                  <li class="body_date">
+                    <a href="./../../app/admin/noticeDetail.html">2025-08-09</a>
+                  </li>
                   <li class="body_delete">
-                    <button class="delete_btn" onclick="modalDeleteNoticeShow()">삭제</button>
+                    <button
+                      class="delete_btn"
+                      onclick="modalDeleteNoticeShow()"
+                      type="button"
+                    >
+                      삭제
+                    </button>
                   </li>
                 </ul>
               </div>
@@ -158,7 +269,9 @@
                 </li>
               </ul>
               <div class="add">
-                <a href="./../../app/admin/noticeAdd.html" class="add_btn">등록</a>
+                <a href="./../../app/admin/noticeAdd.html" class="add_btn"
+                  >등록</a
+                >
               </div>
             </div>
           </div>
