--- a/webapp/app/admin/noticeDetail.html
+++ b/webapp/app/admin/noticeDetail.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>회원 상세페이지(일반)</title>
-    <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/noticeDetail.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/admin/noticeDetail.js"></script>
     <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
@@ -71,8 +70,10 @@
           >
         </div>
         <div class="notice_btn">
-          <button class="list" onclick="cancle()">목록</button>
-          <button class="update" onclick="modalUpdateShow()">수정</button>
+          <button class="list" onclick="cancle()" type="button">목록</button>
+          <button class="update" onclick="modalUpdateShow()" type="button">
+            수정
+          </button>
         </div>
       </section>
     </main>
