--- a/webapp/app/admin/questionDetail.html
+++ b/webapp/app/admin/questionDetail.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1:1문의 사항</title>
-    <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/questionDetail.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
-    <script defer src="./../../assets/js/modal/modalQuestionAnswered.js"></script>
-  <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+    <script
+      defer
+      src="./../../assets/js/modal/modalQuestionAnswered.js"
+    ></script>
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
   <body>
     <div id="header"></div>
@@ -44,8 +46,14 @@
           </div>
         </div>
         <div class="notice_btn">
-          <button class="list" onclick="cancle()">목록</button>
-          <button class="delete" onclick="modalQuestionAnsweredShow()">답변 달기</button>
+          <button class="list" onclick="cancle()" type="button">목록</button>
+          <button
+            class="delete"
+            onclick="modalQuestionAnsweredShow()"
+            type="button"
+          >
+            답변 달기
+          </button>
         </div>
       </section>
     </main>
