--- a/webapp/app/admin/questionDetailUpdate.html
+++ b/webapp/app/admin/questionDetailUpdate.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1:1문의 사항 수정</title>
-    <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link
@@ -13,9 +12,12 @@
       href="./../../assets/css/admin/questionDetailUpdate.css"
     />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
-    <script defer src="./../../assets/js/admin/admin.js"></script>
-    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
+    <script
+      defer
+      src="./../../assets/js/admin/questionDetailUpdate.js"
+    ></script>
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
   <body>
     <div id="header"></div>
@@ -46,11 +48,18 @@
           </div>
         </div>
         <div class="notice_btn">
-          <button class="list">목록</button>
-          <button class="delete">수정완료</button>
+          <button class="list" type="button">목록</button>
+          <button
+            class="delete"
+            onclick="modalQuestionAnsweredShow()"
+            type="button"
+          >
+            수정완료
+          </button>
         </div>
       </section>
     </main>
     <div id="footer"></div>
+    <div id="modalQuestionAnsweredUpdate"></div>
   </body>
 </html>
