--- a/webapp/app/admin/refund.html
+++ b/webapp/app/admin/refund.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>돌봄 회원 환급 관리</title>
-    <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/refund.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/admin/admin.js"></script>
   </head>
 
@@ -42,6 +41,7 @@
               <div class="board_head board_name">신청자 명</div>
               <div class="board_head board_id">신청자 아이디</div>
               <div class="board_head board_date">신청 날짜</div>
+              <div class="board_head board_refund_date">환급 날짜</div>
               <div class="board_head board_type">환급 여부</div>
             </div>
             <div class="table_content">
@@ -50,6 +50,7 @@
                 <li class="body_name"><a href="./../../app/admin/refundDetail.html">가나다</a></li>
                 <li class="body_id"><a href="./../../app/admin/refundDetail.html">abc123</a></li>
                 <li class="body_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
+                <li class="body_refund_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
                 <li class="body_type"><a href="./../../app/admin/refundDetail.html">Y</a></li>
               </ul>
               <ul class="table_body">
@@ -57,6 +58,7 @@
                 <li class="body_name"><a href="./../../app/admin/refundDetail.html">가나다</a></li>
                 <li class="body_id"><a href="./../../app/admin/refundDetail.html">abc123</a></li>
                 <li class="body_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
+                <li class="body_refund_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
                 <li class="body_type"><a href="./../../app/admin/refundDetail.html">Y</a></li>
               </ul>
               <ul class="table_body">
@@ -64,6 +66,7 @@
                 <li class="body_name"><a href="./../../app/admin/refundDetail.html">가나다</a></li>
                 <li class="body_id"><a href="./../../app/admin/refundDetail.html">abc123</a></li>
                 <li class="body_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
+                <li class="body_refund_date"><a href="./../../app/admin/refundDetail.html">NaN</a></li>
                 <li class="body_type"><a href="./../../app/admin/refundDetail.html">N</a></li>
               </ul>
               <ul class="table_body">
@@ -71,6 +74,7 @@
                 <li class="body_name"><a href="./../../app/admin/refundDetail.html">가나다</a></li>
                 <li class="body_id"><a href="./../../app/admin/refundDetail.html">abc123</a></li>
                 <li class="body_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
+                <li class="body_refund_date"><a href="./../../app/admin/refundDetail.html">NaN</a></li>
                 <li class="body_type"><a href="./../../app/admin/refundDetail.html">N</a></li>
               </ul>
               <ul class="table_body">
@@ -78,6 +82,7 @@
                 <li class="body_name"><a href="./../../app/admin/refundDetail.html">가나다</a></li>
                 <li class="body_id"><a href="./../../app/admin/refundDetail.html">abc123</a></li>
                 <li class="body_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
+                <li class="body_refund_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
                 <li class="body_type"><a href="./../../app/admin/refundDetail.html">Y</a></li>
               </ul>
               <ul class="table_body">
@@ -85,6 +90,7 @@
                 <li class="body_name"><a href="./../../app/admin/refundDetail.html">가나다</a></li>
                 <li class="body_id"><a href="./../../app/admin/refundDetail.html">abc123</a></li>
                 <li class="body_date"><a href="./../../app/admin/refundDetail.html">2025-08-09</a></li>
+                <li class="body_refund_date"><a href="./../../app/admin/refundDetail.html">NaN</a></li>
                 <li class="body_type"><a href="./../../app/admin/refundDetail.html">N</a></li>
               </ul>
           </div>
