--- a/webapp/app/admin/refundDetail.html
+++ b/webapp/app/admin/refundDetail.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>돌봄회원 환급 관리</title>
-    <link rel="stylesheet" href="./../../assets/css/admin/" />
-    <link rel="stylesheet" href="./../../assets/css/header.css" />
+    <link rel="stylesheet" href="./../../assets/css/headerAdmin.css" />
     <link rel="stylesheet" href="./../../assets/css/footer.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/basic.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/refundDetail.css" />
     <link rel="stylesheet" href="./../../assets/css/admin/sidebar.css" />
-    <script defer src="./../../assets/js/main/include.js"></script>
-    <!-- <script defer src="./../../assets/js/admin/admin.js"></script> -->
+    <script defer src="./../../assets/js/main/includeAdmin.js"></script>
     <script defer src="./../../assets/js/modal/modalRefundFinished.js"></script>
-    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css">
+    <link rel="stylesheet" href="./../../assets/css/modalAdmin.css" />
   </head>
   <body>
     <div id="header"></div>
@@ -41,8 +39,16 @@
             </div>
           </div>
           <div class="btn_area">
-            <button class="cancle" onclick="cancle()" type="button">취소</button>
-            <button class="submit" onclick="modalRefundFinishedShow()" type="button">환급 완료</button>
+            <button class="cancle" onclick="cancle()" type="button">
+              취소
+            </button>
+            <button
+              class="submit"
+              onclick="modalRefundFinishedShow()"
+              type="button"
+            >
+              환급 완료
+            </button>
           </div>
         </form>
       </section>
