--- a/webapp/app/modal/modalCareAllowReject.html
+++ b/webapp/app/modal/modalCareAllowReject.html
@@ -1,25 +1,18 @@
 <div id="modal">
-  <!-- 모달 바탕 -->
   <div class="modal_window">
-    <!-- 모달 바디 -->
     <div class="modal_body_confirm">
-      <!-- X 버튼 -->
       <div class="modal_x_box">
         <img onclick="modalCareAllowRejectNone()" class="modal_x" src="/team04-RB_frontend/webapp/assets/img/main/xIcon.png">
       </div>
-      <!-- 모달 내용 -->
       <p id="modal_text">
+        <!-- 돌봄회원 가입 반려 -->
         반려 사유를 입력해주세요.
       </p>
-      <!-- 돌봄회원 가입 반려 사유 입력창 -->
       <input type="text" id="reason_reject">
-      <!-- 버튼 영역 -->
       <div class="modal_button_box">
-        <!-- 확인 버튼 -->
         <button onclick="modalCareAllowRejectCheck()" class="modal_check_button">
           확인
         </button>
-        <!-- 취소 버튼 -->
         <button onclick="modalCareAllowRejectCancel()" class="modal_cancel_button">
           취소
         </button>
